[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon_bg.png" type="Texture" id=1]
[ext_resource path="res://icon_black.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Animation"
length = 4.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("LoadMain/Icon:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("LoadMain/Icon:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("LoadMain/Icon:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("LoadMain/Icon:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.5, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 2, 3 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("LoadMain/IconBlack:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("LoadMain/IconBlack:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("LoadMain/IconBlack:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("LoadMain/IconBlack:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.5, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 2, 3 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("LoadMain/ColorRect:color:a")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("LoadMain/ColorRect:color:b")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 0, -1, 0, 0.25, 0, 1, -1, 0, 0.25, 0, 1, -1, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 2, 3 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("LoadMain/ColorRect:color:g")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 0, -1, 0, 0.25, 0, 1, -1, 0, 0.25, 0, 1, -1, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 2, 3 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("LoadMain/ColorRect:color:r")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 0, -1, 0, 0.25, 0, 1, -1, 0, 0.25, 0, 1, -1, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 2, 3 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("LoadMain/IconBlack:scale:x")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.25, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath("LoadMain/IconBlack:scale:y")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.25, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("LoadMain:rotation_degrees")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0, 30, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3, 3.4, 3.7, 3.9 )
}
tracks/15/type = "bezier"
tracks/15/path = NodePath("LoadMain:position:y")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.231454, 13, 601, 0, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3.2, 4 )
}
tracks/16/type = "value"
tracks/16/path = NodePath("LoadMain/Icon:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LoadMain/Icon:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LoadMain/IconBlack:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LoadMain/Icon:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="LoadMain" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="LoadMain"]
margin_right = 1079.0
margin_bottom = 631.0
color = Color( 0, 0, 0, 1 )

[node name="Icon" type="Sprite" parent="LoadMain"]
position = Vector2( 512, 303 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="IconBlack" type="Sprite" parent="LoadMain"]
position = Vector2( 512, 303 )
scale = Vector2( 1e-05, 1e-05 )
z_index = 1
texture = ExtResource( 2 )

[node name="Loaderror" type="AcceptDialog" parent="LoadMain"]
pause_mode = 2
margin_left = 400.0
margin_top = 218.0
margin_right = 636.0
margin_bottom = 378.0
window_title = "Error"
dialog_text = "ERROR:
Cant load the following resources: 
- RESOURCE

Reason: REASON

Press OK reload the game."

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/Animation = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="confirmed" from="LoadMain/Loaderror" to="." method="_on_Loaderror_confirmed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
